Atualização no site, linkando as páginas e adicionando o Readme.

--- a/projeto-f4bank/index.html
+++ b/projeto-f4bank/index.html
@@ -17,12 +17,12 @@
         <nav class="menu-options">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="#" target="_blank">Perguntas</a></li>
-                <li><a href="#" target="_blank">Sobre</a></li>
+                <li><a href="#">Perguntas</a></li>
+                <li><a href="#">Sobre</a></li>
             </ul>
         </nav>
         <div class="div-login">
-            <a href="#" target="_blank">Login</a>
+            <a href="./form.html">Login</a>
         </div>
     </header>
     <main class="main-page">
@@ -48,9 +48,9 @@
         </section>
         <section class="section-card">
             <div class="text-card">
-                <a href="#"><h2>Cartão de Crédito</h2></a>
+                <a href="./form.html"><h2>Cartão de Crédito</h2></a>
                 <p id="text-card">Pode chamar ele de laranjinha. Além disso, pode chamar ele de moderno, gratuito e prático também.</p>
-                <a href="#"><h6>Saiba mais<h6></a>
+                <a href="./form.html"><h6>Saiba mais<h6></a>
             </div>
             <div class="image-card">
                 <img src="./img/f4-card.jpg" alt="Cartão">
