--- a/projeto-f4bank/index.html
+++ b/projeto-f4bank/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="F4bank um banco ágil, fácil e seguro.">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./img/icon-2.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/icon-2.jpg" type="./image/x-icon">
     <title>F4Bank</title>
 </head>
 <body>
     <header class="header">
         <div class="image-logo">
-            <a href="index.html"><img src="./img/logo 3.png" alt="Logo"></a>
+            <a href="./index.html"><img src="./img/logo 3.png" alt="Logo"></a>
         </div>
         <nav class="menu-options">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="#">Perguntas</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="#" title="Esta opção é meramente ilustrativa.">Perguntas</a></li>
+                <li><a href="./sobre.html">Sobre</a></li>
             </ul>
         </nav>
         <div class="div-login">
@@ -58,7 +58,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="index.html"><img src="./img/logo-branco.png" alt="Logo" id="logo-footer"></a>
+        <a href="./index.html"><img src="./img/logo-branco.png" alt="Logo" id="logo-footer"></a>
         <div class="footer-text">
             <p>
                 © 2022  F4 Pagamentos S.A - Instituição de Pagamento.  00.000.000/0001-00
